--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,10 +10,13 @@
   }
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  box-sizing: border-box;
 }
 
 body {
