--- a/src/app/playgame/playgame.module.css
+++ b/src/app/playgame/playgame.module.css
@@ -63,6 +63,21 @@
   color: #fff !important;
   border: 2px solid #222;
 }
+.navButton:hover,
+.active:hover {
+padding: none !important;
+  box-shadow: none !important;
+}
+.navButton:hover,
+.instructions:hover {
+padding: none !important;
+  box-shadow: none !important;
+}
+.navButton:hover,
+.orange:hover {
+padding: none !important;
+  box-shadow: none !important;
+}
 
 .orange {
   background: #FAB93C !important;
